k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  clusterIP: 10.110.127.238
  ports:
    - name: "27019"
      port: 27019
      targetPort: 27017
  selector:
    io.kompose.service: mongodb
status:
  loadBalancer: {}
