k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: express-mongo-auth
              servicePort: 3000
